k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
  - name: http
    port: 80
    targetPort: 8000
